compiler-core/src/type_/snapshots/gleam_core__type___tests__prepend_constant_list_wrong_type.snap
---
source: compiler-core/src/type_/tests.rs
expression: "\nconst pi = 3.14\npub const full_list = [1.0, 2.0, ..pi]\n"
---
----- SOURCE CODE

const pi = 3.14
pub const full_list = [1.0, 2.0, ..pi]


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:36
  │
3 │ pub const full_list = [1.0, 2.0, ..pi]
  │                                    ^^

Expected type:

    List(Float)

Found type:

    Float
